[bumpversion]
current_version = 0.1.7
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.cfg]

[bumpversion:file:setup.py]

[bumpversion:file:xlsx2html/__init__.py]

[wheel]
universal = 1

[flake8]
ignore = D203
exclude = 
	{example_app}/migrations,
	.git,
	.tox,
	docs/conf.py,
	build,
	dist
max-line-length = 99

