[bumpversion]
current_version = 0.4.4
commit = True
commit_args = --no-verify
tag = True
message = chore: bump version {current_version} → {new_version}

[metadata]
description-file = README.md

[bumpversion:file:setup.cfg]

[bumpversion:file:setup.py]

[bumpversion:file:xlsx2html/__init__.py]

[bdist_wheel]
universal = 1

[flake8]
ignore = D203
exclude = 
	{example_app}/migrations,
	.git,
	.tox,
	docs/conf.py,
	build,
	dist
max-line-length = 99

[mypy]
ignore_missing_imports = True
